--- a/exercises/08-outcome-model-exercises.Rmd
+++ b/exercises/08-outcome-model-exercises.Rmd
@@ -9,6 +9,7 @@ library(tidyverse)
 library(broom)
 library(touringplans)
 library(rsample)
+library(MatchIt)
 
 seven_dwarfs <- seven_dwarfs_train_2018 %>%
   filter(hour == 9)
@@ -22,36 +23,105 @@ _After updating the code chunks below, change `eval = TRUE` before knitting._
 
 Create a function called `ipw_fit` that fits the propensity score model from Exercise 03, incorporates the ATE weights calculated in Exercise 04, and fits a weighted outcome model.
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 fit_ipw <- function(split, ...) { 
-  .df <-____
+  
+  .df <-analysis(split)
   
   # fit propensity score model
   
+  propensity_model <- glm(formula = extra_magic_morning ~ wdw_ticket_season + close + weather_wdwhigh,
+                          data = .df,family = binomial())
+  
   # calculate ATE weights
+  
+  .df <- propensity_model %>%
+  augment(type.predict = "response", data = .df) %>% 
+  mutate(w_ate = 1 / ifelse(extra_magic_morning == 0, 
+                            1 - .fitted, .fitted))
 
   # fit correctly bootstrapped ipw model 
-  lm(___ ~ ___, data = .df, weights = ___) %>% 
+  lm(avg_spostmin ~ extra_magic_morning,
+     data = .df, 
+     weights = w_ate) %>% 
     tidy() 
 }
 ```
 
 Bootstrap this result 1000 times.
 
-```{r, eval = FALSE}
+```{r, eval = TRUE}
 set.seed(1234)
 
-ipw_results <- ____(___, 1000, apparent = TRUE) %>% 
-  mutate(results = map(splits, _____)) 
+ipw_results <- bootstraps(seven_dwarfs, 1000, apparent = TRUE) %>% 
+  mutate(results = map(splits, fit_ipw)) 
 ```
 
 
 Calculate the confidence interval
 
-```{r, eval = FALSE}
-boot_estimate <- ____(____, ____) %>% 
-  filter(term == ____)
+```{r, eval = TRUE}
+boot_estimate <- int_t(ipw_results, results) %>% 
+  filter(term == "extra_magic_morning")
+
+
+boot_estimate2 <- int_bca(ipw_results, results,.fn = fit_ipw) %>% 
+  filter(term == "extra_magic_morning")
+```
+
+1. int use t-student distribution
+2. bca bias corrected adjustment (really complex calculation)
+
+Stretch goal: Do the same for a model using matching.
+
+
+```{r}
+
+
+matchit_obj <- matchit(formula = extra_magic_morning ~ wdw_ticket_season + close + weather_wdwhigh,
+                          data = seven_dwarfs,link = "linear.logit")
+
+
+.df <- get_matches(matchit_obj) # we lost a lot of observations
+
+
+
+# Alternatives:
+
+lm(avg_spostmin ~ extra_magic_morning,data = .df)
+
+# In functions:
+
+
+fit_matched <- function(split,...) {
+
+  .df <- analysis(split)  
+  
+  matchit_obj <- matchit(formula = extra_magic_morning ~ wdw_ticket_season + close + weather_wdwhigh,
+                            data = .df,link = "linear.logit")
+  
+  
+  .df <- get_matches(matchit_obj) # we lost a lot of observations
+  
+  
+  
+  # Alternatives:
+  
+  lm(avg_spostmin ~ extra_magic_morning,data = .df) %>% 
+    tidy() 
+}
+
+
+ipw_results_matched <- bootstraps(seven_dwarfs, 1000, apparent = TRUE) %>% 
+  mutate(results = map(splits, fit_matched)) 
+
+
+int_t(ipw_results_matched, results) %>% 
+  filter(term == "extra_magic_morning")
+
 ```
 
 
-Stretch goal: Do the same for a model using matching.
+# Interpretation
+
+When there are extra mafic mornig you will have to wait 4 minutes longer in magic kingdom line
